// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.issues_on_line.multiple_issues.source_viewer.issues_on_line.show"
  >
    <ButtonPlain
      aria-label="source_viewer.issues_on_line.multiple_issues.source_viewer.issues_on_line.show"
      onClick={[MockFunction]}
    >
      <IssueIcon
        type="BUG"
      />
      <span
        className="source-line-issues-counter"
      >
        2
      </span>
    </ButtonPlain>
  </Tooltip>
</td>
`;

exports[`should render correctly: multiple issues, same type 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.issues_on_line.X_issues_of_type_Y.source_viewer.issues_on_line.show.2.issue.type.VULNERABILITY.plural"
  >
    <ButtonPlain
      aria-label="source_viewer.issues_on_line.X_issues_of_type_Y.source_viewer.issues_on_line.show.2.issue.type.VULNERABILITY.plural"
      onClick={[MockFunction]}
    >
      <IssueIcon
        type="VULNERABILITY"
      />
      <span
        className="source-line-issues-counter"
      >
        2
      </span>
    </ButtonPlain>
  </Tooltip>
</td>
`;

exports[`should render correctly: no issues 1`] = `
<td
  className="source-meta source-line-issues"
  data-line-number={3}
/>
`;

exports[`should render correctly: single issue 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.issues_on_line.issue_of_type_X.source_viewer.issues_on_line.show.issue.type.VULNERABILITY"
  >
    <ButtonPlain
      aria-label="source_viewer.issues_on_line.issue_of_type_X.source_viewer.issues_on_line.show.issue.type.VULNERABILITY"
      onClick={[MockFunction]}
    >
      <IssueIcon
        type="VULNERABILITY"
      />
    </ButtonPlain>
  </Tooltip>
</td>
`;
